Fixed alignment? (for real this time maybe)

--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,8 @@ img {
   height: 300px;
 }
 #me.jpg {
- margin: auto; 
+  width: 300px;
+  margin: auto; 
   border-color: #6495ED;
   border-style: solid;
   border-width: 4px;
